# vllm_judge

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  security-scan.yaml
docs/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: basic-evaluation.md  metrics.md  templates.md
examples/: basic_test.ipynb  builtin_metrics.ipynb  guard-models-test.ipynb  templating.ipynb
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/basic-evaluation/: index.html
guide/metrics/: index.html
guide/templates/: index.html
search/: search_index.json
src/vllm_judge/: __init__.py  batch.py  builtin_metrics.py  cli.py  client.py  exceptions.py  judge.py  metrics.py  models.py  parsers.py  prompt_builder.py  prompts.py  templating.py
src/vllm_judge/api/: __init__.py  client.py  models.py  server.py
tests/: conftest.py  test_batch.py  test_builtin_metrics.py  test_exceptions.py  test_integration.py  test_judge.py  test_judge_client.py  test_judge_parsing_comprehensive.py  test_models.py  test_parsers.py  test_prompt_builder.py  test_templating.py  test_vllm_client.py
